--- a/includes/errors/401.html
+++ b/includes/errors/401.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-   <h2 style="margin-left: 30px; text-decoration: underline;color: #000;background:#fff;padding: 10px;width: 36%;border-radius: 5px;">401 | System failure</h2>
+   <h2 style="margin-left: 30px; text-decoration: underline;color: #000;background:#fff;padding: 10px;width: 36%;border-radius: 5px;">Error 401 | System failure</h2>
   <div style="width: 90%;min-height: 200px;background: #f8f8f8; border:1px solid #ccc;border-radius: 10px;margin-top: 38px;margin-left:30px;color: #ff0000; font-weight: bolder;font-size:4em;padding: 20px;">
   	   Sorry, something terrible happend. Please consult the software developer!
   </div>
