--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ body{
 a{
 	text-decoration: none !important;
 }
+.bold{
+	font-weight: bold;
+}
 .logo{
 	background:#4ca1af;
     background:-webkit-linear-gradient(to right, #4ca1af,#c4e0e5);
@@ -79,6 +82,7 @@ input[type=reset],
 button[type=reset],
 input[name=submit_reset],
 span.my-button,
+a.my-button,
 button.my-button,
 input.button {
     margin: 6px 14px;
@@ -106,6 +110,7 @@ input[type=reset]:hover,
 button[type=reset]:hover,
 input[name=submit_reset]:hover,
 span.my-button:hover,
+a.my-button:hover,
 button.my-button:hover,
 input.button:hover {
     position: relative;
